Bug 282706 - Device notifier and notification icon do not grow properly when in panel
Summary: Device notifier and notification icon do not grow properly when in panel
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-devicenotifier (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-24 18:19 UTC by Kai Uwe Broulik
Modified: 2011-12-02 20:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Device notifier and notification dont grow (24.21 KB, image/png)
2011-09-24 18:19 UTC, Kai Uwe Broulik
Details
Attachment 1: normal scaling (8.25 KB, image/png)
2011-11-12 00:33 UTC, g2
Details
Attachment 2: scale off after plugin in usb device - device notifier active (16.55 KB, image/png)
2011-11-12 00:34 UTC, g2
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-09-24 18:19:04 UTC
Created attachment 63928 [details]
Device notifier and notification dont grow

Version:           unspecified (using KDE 4.7.1) 
OS:                Linux

The device notifier plasmoid gets compacted into an icon when it is in a panel. So far, so good. But if that panel grows beyond a certain point, the icon will not grow along with the panel. The battery monitor and network manager (bug fixed a few days ago) grow correctly.

Reproducible: Always

Steps to Reproduce:
But device notifier and/or notification into a panel (not the system tray) and resize the panel quite huge

Actual Results:  
The device notifier and information icon keeps a small size

Expected Results:  
Those icons should grow the same as the other plasmoid icons do.
Comment 1 Janet 2011-10-02 02:09:22 UTC
I cannot confirm this. On Kubuntu 11.04 with KDE SC 4.7.1 the device notifier in the panel scales fine to 128x128. The notification icon on the other hand does not scale, I have to admit, but I don't expect (and don't want) it to scale because it marks the beginning of the system tray with the small icons.
Comment 2 Kai Uwe Broulik 2011-10-02 11:53:11 UTC
On Kubuntu 11.04 with KDE 4.7.1 the device notifier in the panel does not scale beyond a certain point (although it is using an SVG graphics which is scalable). 
I was not talking of the system tray but the panel. If you place te notiifcation plasmoid in the system tray it is fine to not scale to be consistent with the rest of the tray icons but when the icon is placed alone in the panel it has to scale like the other plasmoids.
Comment 3 g2 2011-11-12 00:32:46 UTC
On gentoo with latest stable kde flavour 4.7.3 a similar behaviour exists: Scaling of plasma svg icons (Air Theme) seems to be limited towards small icon sizes. I deduce this after seeing some scaling issues with the resize and rotate aka krandr and the device notifier icon in my 18x18 icon size system tray (see attachments). 

Interestingly scaling is not an issue if the battery icon, aka power devil, is active,!!

Attachment 1 [details] shows proper scaling of system tray during neither krandr nor device notfier beeing active.

Attachment 2 [details] shows corrupeted scaling with device notifier beein active (after pluging in a usb device). This holds true also for the resize and rotate icon.

The following bugs are possibly related:
https://bugs.kde.org/show_bug.cgi?id=278152
https://bugs.kde.org/show_bug.cgi?id=246916
Comment 4 g2 2011-11-12 00:33:31 UTC
Created attachment 65534 [details]
Attachment 1 [details]: normal scaling
Comment 5 g2 2011-11-12 00:34:21 UTC
Created attachment 65535 [details]
Attachment 2 [details]: scale off after plugin in usb device - device notifier active
Comment 6 Aaron J. Seigo 2011-12-02 16:31:46 UTC
Git commit 7d16487473b7da75cc9a5e1052882b494dcf4944 by Aaron Seigo.
Committed on 02/12/2011 at 17:30.
Pushed by aseigo into branch 'KDE/4.7'.

constrained square makes sense for vertical but not horizontal panels

BUG:282706

M  +1    -1    plasma/applet.cpp

http://commits.kde.org/kdelibs/7d16487473b7da75cc9a5e1052882b494dcf4944
Comment 7 Aaron J. Seigo 2011-12-02 20:53:24 UTC
Git commit 6e57db9078827ce7aa77aa5bea26ea8306ec0fad by Aaron Seigo.
Committed on 02/12/2011 at 17:30.
Pushed by aseigo into branch 'frameworks'.

constrained square makes sense for vertical but not horizontal panels

BUG:282706

M  +1    -1    plasma/applet.cpp

http://commits.kde.org/kdelibs/6e57db9078827ce7aa77aa5bea26ea8306ec0fad