constrained square makes sense for vertical but not horizontal panels

BUG:282706